Update homepage with student ID 21593183

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,40 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Express</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Express Sample App</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f7f9fb;
+      text-align: center;
+      margin: 0;
+      padding: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #666;
+      font-size: 1.1em;
+    }
+    .student-id {
+      margin-top: 40px;
+      font-size: 1.3em;
+      color: #007acc;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
+  <h1>Welcome to Express</h1>
+  <p>This page is served by the Express static server from the <code>public/</code> directory.</p>
 
+  <div class="student-id">
+    My Student ID is <strong>21593183</strong>
+  </div>
+</body>
 </html>
